--- a/resources/scss/app.css
+++ b/resources/scss/app.css
@@ -1,5 +1,5 @@
-@use 'tailwindcss';
-@use "components/fullcalendar.scss";
+@import "tailwindcss";
+@import "./components/fullcalendar.css";
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -9,4 +9,8 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+@theme {
+    --color-primary: #ff8000;
 }
