--- a/resources/scss/app.css
+++ b/resources/scss/app.css
@@ -6,6 +6,8 @@
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
+@source '../../resources/views/filament/';
+@source '../../app/Filament/';
 
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
